--- a/deesgourmet/package.json
+++ b/deesgourmet/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
