--- a/deesgourmet/package.json
+++ b/deesgourmet/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "axios": "^0.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "^6.4.2",
+    "usestate": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
